Fix typo in Exercicio_1.ipynb

--- a/Exercicio_1/Exercicio_1.ipynb
+++ b/Exercicio_1/Exercicio_1.ipynb
@@ -31,7 +31,7 @@
    ],
    "source": [
     "\"\"\"\n",
-    "Exercício 1 - Tarefa_2 - Item_1\n",
+    "Exercício 1 - Tarefa 2 - Item 1\n",
     "\n",
     "Qual o tipo de reação mais reportado na tabela? Lembre-se que uma linha pode ter\n",
     "mais de uma reação separada por “;”.\n",
@@ -62,7 +62,7 @@
    ],
    "source": [
     "\"\"\"\n",
-    "Exercício 1 - Tarefa_2 - Item_2\n",
+    "Exercício 1 - Tarefa 2 - Item 2\n",
     "\n",
     "Qual o nome da indústria que tem mais mortes reportadas?\n",
     "\"\"\"\n",
@@ -94,7 +94,7 @@
    ],
    "source": [
     "\"\"\"\n",
-    "Exercício 1 - Tarefa_2 - Item_3\n",
+    "Exercício 1 - Tarefa 2 - Item 3\n",
     "\n",
     "Quais as 3 principais reações adversas de pessoas entre 18-25 anos na indústria de\n",
     "cosméticos?\n",
